# Agentic-project

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  schemas.py
app/agents/: __init__.py  basic_agent.py
app/rag/: __init__.py  answerer.py  chunker.py  document_loader.py  embeddings.py  models.py  prompting.py  service.py  vector_store.py
app/tools/: __init__.py  base.py  calculator.py  knowledge.py  rag_search.py
data/documents/: agent-basics.md  production-rag-limitations.md  project-02-rag-agent-test-pm.md  project-02-rag-agent-test-profile-read.md  project-02-rag-agent.md  project-03-rag-answering.md  project-04-llm-rag-answering.md  rag-basics.md
projects/project-01-basic-agent/: README.md
projects/project-02-rag-agent/: README.md
projects/project-03-rag-answering/: README.md
projects/project-04-llm-rag-answering/: README.md
tests/: test_api.py  test_basic_agent.py  test_rag.py
