[project]
name = "agentic-project"
version = "0.1.0"
description = "A Dockerized learning lab for building agentic AI projects from first principles."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
